[gd_scene load_steps=5 format=2]

[ext_resource path="res://pages/timetable/create_calendar.gd" type="Script" id=1]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=3]
[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=4]

[node name="Create Calendar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 520.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Créer/Modifier un calendrier :"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 520.0
margin_bottom = 39.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 520.0
margin_bottom = 940.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inputs" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 520.0
margin_bottom = 897.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 520.0
margin_bottom = 222.0
size_flags_vertical = 3

[node name="Titre" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
margin_top = 237.0
margin_right = 520.0
margin_bottom = 313.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Inputs/Titre"]
margin_right = 520.0
margin_bottom = 31.0
text = "Nom :"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/Inputs/Titre"]
margin_top = 35.0
margin_right = 520.0
margin_bottom = 76.0
placeholder_text = "Nom du calendrier"

[node name="Activé" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
margin_top = 328.0
margin_right = 520.0
margin_bottom = 367.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Inputs/Activé"]
margin_top = 4.0
margin_right = 89.0
margin_bottom = 35.0
text = "Activé :"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/ScrollContainer/Inputs/Activé"]
margin_left = 93.0
margin_right = 117.0
margin_bottom = 39.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 382.0
margin_right = 520.0
margin_bottom = 604.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
visible = false
margin_top = 583.0
margin_right = 520.0
margin_bottom = 623.0

[node name="Bt_Delete" type="Button" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer2"]
margin_right = 258.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Supprimer"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 262.0
margin_right = 520.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
margin_top = 619.0
margin_right = 520.0
margin_bottom = 659.0

[node name="Bt_Cancel" type="Button" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer"]
margin_right = 258.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Annuler"

[node name="Bt_Validate" type="Button" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer"]
margin_left = 262.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Valider"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 674.0
margin_right = 520.0
margin_bottom = 897.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ScrollContainer/Inputs/VBoxContainer2/Bt_Delete" to="." method="_on_Bt_Delete_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Inputs/VBoxContainer/Bt_Cancel" to="." method="_on_Bt_Cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Inputs/VBoxContainer/Bt_Validate" to="." method="_on_Bt_Validate_pressed"]
